Copy over revision notes for part 6